<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.piesat.space</groupId>
        <artifactId>spaceXP</artifactId>
        <version>${revision}</version>
    </parent>
    <packaging>pom</packaging>
    <properties>
        <java.version>1.8</java.version>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <modules>
        <module>spaceXP-common</module>
        <module>spaceXP-spring-boot-starter-web</module>
        <module>spaceXP-spring-boot-starter-mybatis-plus</module>
        <module>spaceXP-spring-boot-starter-knife4j</module>
        <module>spaceXP-spring-boot-starter-security</module>
        <module>spaceXP-spring-boot-starter-redis</module>
        <module>spaceXP-spring-boot-starter-file-s3</module>
        <module>spaceXP-spring-boot-starter-log</module>
        <module>spaceXP-spring-boot-starter-feign</module>
        <module>spaceXP-spring-boot-starter-permission-url</module>
        <module>spaceXP-spring-boot-starter-permission-data</module>
        <module>spaceXP-spring-boot-starter-multi-tenant</module>
        <module>spaceXP-spring-boot-starter-dynamic-datasource</module>
        <module>spaceXP-spring-boot-starter-kafka-datasource</module>
        <module>spaceXP-spring-boot-starter-mybatis-plus-external</module>
        <module>spaceXP-spring-boot-starter-redis-external</module>
        <module>spaceXP-spring-boot-starter-websocket</module>
        <module>spaceXP-spring-boot-starter-log-external</module>
        <module>spaceXP-spring-boot-starter-test</module>
        <module>spaceXP-spring-boot-starter-sse</module>
    </modules>
    <artifactId>spaceXP-framework</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>

    </build>
</project>
